--- a/_template/css/style.css
+++ b/_template/css/style.css
@@ -128,6 +128,10 @@ nav > .container {
   color: white;
 }
 
+.links > ul > li > a:hover {
+  cursor: pointer;
+}
+
 .btn-search {
   background-color: white !important;
   color: var(--nav-background);
