--- a/_template/css/style.css
+++ b/_template/css/style.css
@@ -25,6 +25,7 @@ body {
   --btn-contact-hover: rgb(0, 62, 150, 1);
   --btn-whatsapp-hover: rgba(0, 158, 0, 1);
   --offering-color: rgba(236, 239, 243, 1);
+  --offering-color-sec: rgba(236, 239, 243, 0.8);
 }
 
 /* Utility classes */
@@ -47,8 +48,9 @@ body {
   border-radius: 0.2rem;
   color: white;
   box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.48);
-  transition: 0.3s ease;
-  transition-property: background-color, border, box-shadow, color, transform;
+  transition: 0.2s ease;
+  transition-property: background-color, border, box-shadow, color, transform,
+    width, height;
 }
 
 .btn:hover {
@@ -63,12 +65,42 @@ body {
 
 /* Navbar */
 
+.nav-back {
+  position: absolute;
+  top: 0;
+  height: 5rem;
+  width: 100%;
+  z-index: 1;
+  background-color: var(--nav-background);
+}
+
 nav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
   width: 100%;
   height: 5rem;
   background-color: var(--nav-background);
   box-shadow: -1px -1px 10px -1px black;
-  z-index: 5;
+  z-index: 10;
+  transition: 0.2s ease;
+}
+
+.nav-shrunk {
+  height: 3rem !important;
+}
+
+.nav-shrunk > .container {
+  max-width: 60%;
+}
+
+.nav-shrunk > .container > .links > .btn-search {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.nav-shrunk > .container > .brand {
+  width: 3rem !important;
 }
 
 nav > .container {
@@ -76,6 +108,7 @@ nav > .container {
   height: 100%;
   justify-content: space-between;
   align-items: center;
+  transition: 0.2s ease;
 }
 
 .brand {
@@ -90,6 +123,7 @@ nav > .container {
   background-position: center;
   background-size: 50%;
   user-select: none;
+  transition: 0.2s ease;
 }
 
 .brand:hover {
@@ -148,6 +182,10 @@ nav > .container {
 }
 
 /* Main */
+
+main {
+  margin-top: 5rem;
+}
 
 /* Banner */
 
@@ -260,6 +298,12 @@ nav > .container {
   background-color: var(--offering-color);
   margin-left: auto;
   margin-right: auto;
+  transition: 0.2s ease;
+}
+
+.features:hover {
+  background-color: var(--offering-color-sec);
+  box-shadow: 0 0 10px 1px black;
 }
 
 .features > ul {
@@ -304,7 +348,6 @@ nav > .container {
 /* What do we do */
 
 #section_whatdowedo {
-  position: relative;
   z-index: 4;
   background-color: white;
 }
@@ -333,18 +376,20 @@ nav > .container {
   align-items: flex-start;
   width: 100%;
   list-style-type: none;
+  margin-bottom: 3rem;
 }
 
 #section_whatdowedo .offerings > ul > li {
   float: left;
   display: flex;
+  border-radius: 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: auto;
   text-align: center;
   margin: 1rem;
-  padding: 0.1rem;
+  padding: 0.3rem;
 }
 
 #section_whatdowedo .offerings > ul > li:nth-child(2) {
@@ -407,6 +452,38 @@ nav > .container {
 
 #section_whatdowedo .offerings .offering-logo-5 {
   background-image: url(../img/offering-logos/5.webp);
+}
+
+#section_aboutus {
+  z-index: 3;
+  background-image: url(../img/aboutus.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 30%;
+  height: 45rem;
+  width: 100%;
+}
+
+#section_aboutus > .overlay {
+  z-index: 4;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+#section_aboutus > .overlay > .divider {
+  z-index: 5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3vw;
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIzdnciIHZpZXdCb3g9IjAgMCAxMjgwIDE0MCIgcHJlc2VydmVBc3BlY3RSYXRpbz0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZyBmaWxsPSIjZmZmZmZmIj48cGF0aCBkPSJNNjQwIDE0MEMyODYuNTQgMTQwIDAgMCAwIDBoMTI4MFM5OTMuNDYgMTQwIDY0MCAxNDB6Ii8+PC9nPjwvc3ZnPg==);
+  background-size: 100% 3vw;
+  background-repeat: no-repeat;
+  pointer-events: none;
+  margin-top: -1px;
 }
 
 /* Responsive */
