--- a/_template/css/style.css
+++ b/_template/css/style.css
@@ -26,6 +26,9 @@ body {
   --btn-whatsapp-hover: rgba(0, 158, 0, 1);
   --offering-color: rgba(236, 239, 243, 1);
   --offering-color-sec: rgba(236, 239, 243, 0.8);
+  --offering-color-sec: rgba(196, 199, 203, 1);
+  --ourservices-back: rgba(230, 235, 255, 1);
+  --servicecard: rgba(255, 255, 255, 0.7);
 }
 
 /* Utility classes */
@@ -45,7 +48,7 @@ body {
   text-decoration: none;
 
   background-color: var(--default-btn);
-  border-radius: 0.2rem;
+  border-radius: 0.5rem;
   color: white;
   box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.48);
   transition: 0.2s ease;
@@ -423,6 +426,11 @@ main {
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
+  transition: 0.2s ease;
+}
+
+#section_whatdowedo .offerings .offering-logo-wrap:hover {
+  border: 3px solid var(--offering-color-sec);
 }
 
 #section_whatdowedo .offerings .offering-logo {
@@ -470,6 +478,7 @@ main {
   height: 100%;
   position: relative;
   background-color: rgba(0, 0, 0, 0.8);
+  color: white;
 }
 
 #section_aboutus > .overlay > .divider {
@@ -484,6 +493,179 @@ main {
   background-repeat: no-repeat;
   pointer-events: none;
   margin-top: -1px;
+}
+
+#section_aboutus > .overlay > .container {
+  padding-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#section_aboutus .top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#section_aboutus .bottom {
+  padding: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#section_aboutus .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 3rem;
+}
+
+#section_aboutus .left h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+#section_aboutus .left p {
+  font-size: 1.2rem;
+}
+
+#section_aboutus .left p .invert {
+  color: black;
+  background-color: white;
+  font-size: 1.4rem;
+  padding: 0 0.1rem;
+  border-radius: 0.2rem;
+}
+
+#section_aboutus .right {
+  padding: 3rem;
+}
+
+#section_aboutus .picture-box {
+  box-shadow: 0 0 20px -5px var(--offering-color);
+  background-color: var(--offering-color);
+  background-image: url(../img/aboutus-picture.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 30vw;
+  height: 15vw;
+}
+
+#section_aboutus .bottom a {
+  margin: 1rem;
+  height: 5rem;
+  font-size: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+#section_aboutus .bottom a > span:first-child {
+  font-size: 2rem;
+}
+
+#section_aboutus .bottom a > span:last-child {
+  font-size: 1rem;
+}
+
+#section_ourservices {
+  width: 100%;
+  background-color: var(--ourservices-back);
+}
+
+#section_ourservices > .container {
+  padding: 3rem 0;
+}
+
+#section_ourservices .top {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+#section_ourservices .top h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+#section_ourservices .top p {
+  width: 40rem;
+}
+
+#section_ourservices .bottom {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+#section_ourservices .bottom > .servicecard {
+  background-color: var(--servicecard);
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1rem;
+  border-radius: 2rem;
+  box-shadow: 0 0 15px -10px grey;
+  transition: 0.2s ease;
+}
+
+#section_ourservices .bottom > .servicecard:hover {
+  z-index: 10;
+  transform: scale(1.1);
+  box-shadow: 0 0 15px -5px grey;
+}
+
+#section_ourservices .bottom > .servicecard h3 {
+  margin-bottom: 1rem;
+}
+
+#section_ourservices .bottom > .servicecard:last-child {
+  background-color: transparent;
+  padding: 0;
+}
+
+#section_ourservices .bottom > .servicecard:last-child a {
+  width: 100%;
+  height: 100%;
+  border-radius: 2rem;
+  font-size: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#section_ourservices .bottom > .servicecard:last-child a:hover {
+  background-color: var(--servicecard);
+  color: var(--btn-contact);
+}
+
+#section_ourservices .bottom > .servicecard:last-child > a > span:first-child {
+  font-size: 1.5rem;
+}
+
+#section_ourservices .bottom > .servicecard:last-child > a > span:last-child {
+  font-size: 1rem;
 }
 
 /* Responsive */
