--- a/_template/css/style.css
+++ b/_template/css/style.css
@@ -97,9 +97,12 @@ nav {
   max-width: 60%;
 }
 
-.nav-shrunk > .container > .links > .btn-search {
-  width: 2.5rem;
+.nav-shrunk > .container > .links > .search-box {
   height: 2.5rem;
+}
+
+.nav-shrunk > .container > .links > .search-box > .btn-search {
+  width: 2.5rem;
 }
 
 .nav-shrunk > .container > .brand {
@@ -142,6 +145,7 @@ nav > .container {
 
 .links > ul {
   list-style-type: none;
+  transition: 0.2s ease;
 }
 
 .links > ul > li {
@@ -169,12 +173,57 @@ nav > .container {
   cursor: pointer;
 }
 
-.btn-search {
+.search-box {
+  height: 3rem;
+  margin-left: 2rem;
   background-color: white !important;
   color: var(--nav-background);
-  margin-left: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.48);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.2s ease;
+}
+
+.search-box:hover > .search-input {
+  width: 15rem;
+  padding-left: 1rem;
+}
+
+.search-box:hover > .btn-search {
+  background-color: var(--nav-background) !important;
+  border: 1px solid white;
+  cursor: pointer;
+  color: white;
+}
+
+.search-box:hover > .btn-search:hover {
+  background-color: var(--btn-contact-hover) !important;
+  cursor: pointer;
+}
+
+.search-input {
+  border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding: 0;
+  color: var(--nav-background);
+  font: inherit;
+  transition: 0.4s ease;
+  height: 90%;
+  width: 0;
+}
+
+.btn-search {
+  float: right;
+  background-color: white !important;
+  box-shadow: none;
+  color: var(--nav-background);
   width: 3rem;
-  height: 3rem;
+  height: 100%;
+  transition: 0.2s ease;
 }
 
 .btn-search:hover {
