--- a/_template/css/style.css
+++ b/_template/css/style.css
@@ -8,6 +8,10 @@
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: var(--background-color);
@@ -658,8 +662,9 @@ main {
 #section_ourservices .bottom {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1rem;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
